fixed fontawesome, add border to iframe, aligned background image.

--- a/productcss.css
+++ b/productcss.css
@@ -32,6 +32,7 @@ a {
 
 header {
     position: fixed;
+    width: 100%;
     top: 0;
     min-height: 75px;
     padding: 0px 20px;
@@ -39,7 +40,7 @@ header {
     justify-content: space-around;
     align-items: center;
     background-image: url(https://lvesthetics.ca/wp-content/uploads/2018/09/marble-background-countertop-classic-kitchen.jpg);
-    background-size: cover;
+    background-size: 0px 500px;
 }
 
 .logo {
@@ -147,7 +148,12 @@ li {
 
 #how-it-works>iframe {
     max-width: 560px;
-    width: 100%;
+    width: 500px;
+    height: 300px;
+    border: 35px solid transparent;
+    padding: 0px;
+    padding: 1px;
+    border-image: url(https://i.pinimg.com/originals/1e/40/37/1e403756e6b5162b5e11c33702a5d370.png) 160 round;
 }
 
 #pricing {
@@ -166,17 +172,18 @@ li {
     align-items: center;
     justify-content: center;
     height: 125px;
-    width: 20vw;
+    width: 15vw;
     color: darkorange;
+    padding-left: 10%;
 }
 
 #features .desc {
-    display: flex;
+    display: inline-flex;
     flex-direction: column;
     justify-content: center;
     height: 125px;
     width: 80vw;
-    padding: 5px;
+    padding-left: 25px;
 }
 
 .product {
@@ -227,6 +234,9 @@ footer {
     margin-top: 30px;
     background-color: #ddd;
     padding: 20px;
+    width: 100%;
+    background-image: url(https://lvesthetics.ca/wp-content/uploads/2018/09/marble-background-countertop-classic-kitchen.jpg);
+    background-size: 0px 500px;
 }
 
 footer>ul {
